<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:title="@string/detail_story"
            app:navigationIcon="@drawable/ic_baseline_arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_custom_person"
        android:transitionName="profile"
        android:contentDescription="@string/profile"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toEndOf="@+id/profileImageView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="12sp"
        android:textColor="@color/gray"
        android:transitionName="date"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintStart_toEndOf="@id/profileImageView"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@tools:sample/date/mmddyy" />

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:transitionName="photo"
        android:contentDescription="@string/photo"
        app:layout_constraintTop_toBottomOf="@id/dateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:transitionName="description"
        app:layout_constraintTop_toBottomOf="@id/photoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="@tools:sample/lorem/random" />

</androidx.constraintlayout.widget.ConstraintLayout>