<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.add.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:title="@string/add_story"
                app:navigationIcon="@drawable/ic_baseline_arrow_back" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/ImagePreviewTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginHorizontal="16dp"
            android:text="Image Preview"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="328dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/ImagePreviewTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/previewImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/photo"
                android:src="@drawable/bg_image_placeholder" />

        </com.google.android.material.card.MaterialCardView>

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_custom_camera"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            app:layout_constraintEnd_toStartOf="@id/galleryButton"/>

        <ImageButton
            android:id="@+id/galleryButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_custom_gallery"
            app:layout_constraintBottom_toBottomOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="@id/cardView" />

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/cameraButton"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginStart="16dp"-->
<!--            android:layout_marginEnd="8dp"-->
<!--            android:text="@string/camera"-->
<!--            android:textSize="14sp"-->
<!--            android:textAllCaps="false"-->
<!--            android:insetTop="0dp"-->
<!--            android:insetBottom="0dp"-->
<!--            app:cornerRadius="8dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/cardView"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@id/galleryButton" />-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/galleryButton"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="16dp"-->
<!--            android:layout_marginStart="8dp"-->
<!--            android:layout_marginEnd="16dp"-->
<!--            android:text="@string/gallery"-->
<!--            android:textSize="14sp"-->
<!--            android:textAllCaps="false"-->
<!--            android:insetTop="0dp"-->
<!--            android:insetBottom="0dp"-->
<!--            app:cornerRadius="8dp"-->
<!--            android:textColor="@color/white"-->
<!--            app:layout_constraintTop_toBottomOf="@id/cardView"-->
<!--            app:layout_constraintStart_toEndOf="@id/cameraButton"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:text="@string/description"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionInputLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:hintEnabled="false"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:inputType="text|textMultiLine"
                android:textSize="14sp"
                android:gravity="top|start"
                android:autofillHints=""
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/shareLocationSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:minHeight="0dp"
            android:text="Share Location"
            app:layout_constraintTop_toBottomOf="@id/descriptionInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.arya.storyapp.views.CustomProgressButton
            android:id="@+id/uploadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="16dp"
            app:progress_button_title="@string/upload"
            app:progress_button_loading_title="@string/please_wait"
            app:layout_constraintTop_toBottomOf="@id/shareLocationSwitch"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>